# GalSim

./: .gitignore  CMakeLists.txt  README.md
config/required/: cepheids.csv  cepheids_pos.csv  clust_ak.txt  msx_data.csv
config/usr/: galsim-config.lua
src/: CMakeLists.txt  Constants.hpp  Disks.cpp  Disks.hpp  Disks2.cpp  Disks2.hpp  Galaxy.cpp  Galaxy.hpp  GalaxyParameters.hpp  HII.cpp  HII.hpp  HosTracks.cpp  HosTracks.hpp  KroupaIMF.cpp  KroupaIMF.hpp  Logger.hpp  MonteCarloCumulative.cpp  MonteCarloCumulative.hpp  ParseLua.hpp  ProgressBar.cpp  Random.cpp  Random.hpp  Recipes.cpp  Recipes.hpp  SpiralArms.cpp  SpiralArms.hpp  SpiralArms2.cpp  SpiralArms2.hpp  Star.cpp  Star.hpp  Statistics.hpp  func.cpp  func.hpp  main.cpp
